--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,23 @@
 @tailwind components;
 @tailwind utilities;
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: theme('colors.stone.500');
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: theme('colors.stone.900');
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
