Home component: added logo and refined animations

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,8 +4,6 @@
     <p class="intro">{{ cvData.intro }}</p>
   </div>
   <div class="right">
-<!--    <img src="assets/img/profile.jpg" alt="Profile image">-->
-<!--    <div class="fade"></div>-->
-
+    <i class="ri-expand-left-right-line"></i>
   </div>
 </div>
