Added responsive logo to home section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,6 +4,6 @@
     <p class="intro">{{ cvData.intro }}</p>
   </div>
   <div class="right">
-    <i class="ri-expand-left-right-line"></i>
+    <img src="assets/img/home-logo.svg" />
   </div>
 </div>
