--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -2,11 +2,11 @@ nav {
   @apply
   bg-slate-50
   z-50
-  fixed w-full
+  fixed w-screen
   p-6
   flex flex-row
   text-center justify-center
-  gap-10
+  gap-5 lg:gap-10
   border-b-2 border-slate-100;
 
   .nav-item {
